<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoMultiLayoutDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="150dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/box"
    android:orientation="vertical">

    <TextView
        android:id="@+id/warningMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/sortie"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="@color/greenY"
        android:textSize="@dimen/_24ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18ssp"
        android:fontFamily="@font/sortie"
        android:gravity="start"
        android:lineSpacingExtra="10sp"
        android:text="@string/multi_info"
        android:textColor="@color/whiteY" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_grn_bg"
        android:fontFamily="@font/sortie"
        android:text="@string/okay"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
