<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ChatFragmentFriendly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cocX"
    tools:context=".presentation.online.ChatFragmentFriendly">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showMsgList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/emoji"
        app:layout_constraintTop_toTopOf="parent"
        app:reverseLayout="true"
        tools:listitem="@layout/custom_msg_list_view" />

    <LinearLayout
        android:id="@+id/emoji"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/side_nav_bar"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lin">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendHaha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_special_bg"
            android:text="@string/emoji_haha"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendCry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_special_bg"
            android:text="@string/emoji_cry"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendScream"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_special_bg"
            android:text="@string/emoji_scream"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendKiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_special_bg"
            android:text="@string/emoji_kiss"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendYawn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_special_bg"
            android:text="@string/emoji_yawn"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/side_nav_bar"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/chatBoxFriendly"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1.4"
            android:background="@drawable/box_chat"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/sortie"
            android:maxLines="1"
            android:hint="@string/type_here"
            android:imeOptions="actionSend"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lineSpacingExtra="5sp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/cocZz"
            android:textColorHint="@color/cocZ"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/msgSendBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="9.5dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_send_bg"
            android:src="@drawable/icon_send"
            app:tint="#E0D89F" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>