<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayoutDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayoutFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/box_chat"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/sortie"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/greenY"
                android:textSize="30sp"

                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonChangeAccount"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/btn_grnx_bg"
                android:fontFamily="@font/sortie"
                android:src="@drawable/icon_switch_user"
                android:visibility="gone"
                tools:visibility="visible" />
        </FrameLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profileShapeLayout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="50dp"
            app:strokeColor="@color/whiteY"
            app:strokeWidth="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <!--    <de.hdodenhof.circleimageview.CircleImageView-->
        <!--        android:id="@+id/profile_image"-->
        <!--        android:layout_width="96dp"-->
        <!--        android:layout_height="96dp"-->
        <!--        android:layout_gravity="center"-->
        <!--        android:src="@drawable/ic_launcher_foreground"-->
        <!--        app:civ_border_color="@color/cocZz"-->
        <!--        app:civ_border_width="5dp" />-->

        <LinearLayout
            android:id="@+id/coinShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:paddingHorizontal="20dp"

            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/coinHave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8sp"
                android:fontFamily="@font/sortie"
                android:textColor="@color/cocZz"
                android:textSize="30sp"
                tools:text="730" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/icon_trophy" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nmLinLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/nmLTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:layout_marginEnd="@dimen/_2ssp"
                android:fontFamily="@font/sortie"
                android:text="@string/name_cln"
                android:textColor="@color/white"
                android:textSize="24sp"


                />

            <EditText
                android:id="@+id/nmTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="@font/sortie"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="8"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteY"
                android:textSize="24sp"
                tools:text="Noob35" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/nmEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_special_bg"
                android:padding="10dp"
                android:src="@drawable/icon_edit"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/countryLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5sp"
            android:paddingHorizontal="30dp"


            >

            <TextView
                android:id="@+id/countryLTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2ssp"
                android:fontFamily="@font/sortie"
                android:text="@string/from"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/countryTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sortie"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Bangladesh 🇧🇩"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:paddingHorizontal="30dp"


            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2ssp"
                android:fontFamily="@font/sortie"
                android:text="@string/level"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/lvlTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sortie"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:paddingHorizontal="30dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2ssp"
                android:fontFamily="@font/sortie"
                android:text="@string/match_played"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/matchPlayedTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sortie"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="30dp"


            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2ssp"
                android:fontFamily="@font/sortie"
                android:text="@string/match_won"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/matchWonTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sortie"
                android:maxLength="8"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/themeBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/box_chat"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/sortie"
                android:text="@string/themes"
                android:textColor="@color/whiteY"
                android:textSize="17sp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sortie"
                android:padding="30dp"
                android:text="@string/coming_later"
                android:textColor="@color/cocZz"
                android:textSize="17sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSaveInfo"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_grn_bg"
            android:fontFamily="@font/sortie"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>
